2006-09-01  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.10 and bumped up to version
        0.0.11.

2006-05-29  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.9 and bumped up to version
        0.0.10.

2006-05-14  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Added -s (strip) to linker flags when no
	debugging enabled.

2006-03-12  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Checking for some math functions: jn, yn, erf,
	erfc and round.

2006-01-30  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Checking for correct version of flex.

2006-01-21  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.8 and bumped up to version
        0.0.9.

2005-11-12  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Checking for size of 'long double' if
	necessary.

2005-07-22  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.7 and bumped up to version
        0.0.8.

2005-06-01  Stefan Jahn  <stefan@lkcc.org>

	* Replaced FSF address everywhere.

2005-05-25  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.6 and bumped up to version
        0.0.7.

2005-03-25  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Detecting whether flex accepts --nounistd.

2005-03-01  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.5 and bumped up to version
        0.0.6.

2004-11-24  Raimund Jacob  <raimi@lkcc.org>

	* autogen.sh: Make aclocal and automake program be overridable
	with environment variable. Need this so i can easily build on
	debian woody, I hope nobody takes offense.
	PS: While Stefan is away, I will commit his stuff.

2004-10-25  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Modified script in order to allow CXXFLAGS and
	CFLAGS to be given by the user.

2004-10-23  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.4 and bumped up to version
        0.0.5.

2004-09-17  Stefan Jahn  <stefan@lkcc.org>
