@@ -78,7 +78,10 @@ else
   if test "x$GCC" = xyes; then
     CFLAGS="`echo $CFLAGS | sed -e 's/\-g //g'`"
     CXXFLAGS="`echo $CXXFLAGS | sed -e 's/\-g //g'`"
-    LDFLAGS="$LDFLAGS -s"
+    case $host_os in
+      *darwin*) LDFLAGS="$LDFLAGS" ;;
+      *)        LDFLAGS="$LDFLAGS -s" ;;
+    esac
   fi
 fi
 unset enable_debug
